--- a/static/css/themes/Spruce.css
+++ b/static/css/themes/Spruce.css
@@ -4697,7 +4697,7 @@ button.close {
 	flex-direction: column;
 	width: 100%;
 	pointer-events: auto;
-	background-color: #031814;
+	background-color: #07382f;
 	background-clip: padding-box;
 	border: 1px solid rgba(0,0,0,0.2);
 	border-radius: .3rem;
